--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,9 @@ h1 {
 
 #players li {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
   width: 50%;
   border: 2px solid transparent;
 }
@@ -133,7 +135,8 @@ h1 {
 }
 
 .player-symbol {
-  margin-left: 1rem;
+  display: block;
+  /* margin-left: 1rem; */
   font-size: 1rem;
   color: #e1dec7;
 }
@@ -171,20 +174,27 @@ ol {
 
 #game-board ol {
   display: flex;
-  flex-wrap: wrap;
+  width: 100%;
+  /* flex-wrap: wrap; */
   justify-content: center;
   gap: 2rem;
   margin: 0;
   padding: 0;
 }
 
+#game-board li {
+  width:60vw;
+  align-self: center;
+  max-width: 550px;
+}
+
 #game-board button {
-  width: 8rem;
+  width:100%;
   height: 8rem;
   border: none;
   background: #aca788;
   color: #3f3b00;
-  font-size: 5rem;
+  font-size:5rem;
   cursor: pointer;
   font-family: 'Caprasimo', cursive;
   padding: 1rem;
@@ -348,4 +358,15 @@ ol {
   100% {
     transform: scale(1);
   }
+}
+
+@media screen  and (max-width: 600px) {
+    #game-board button {
+      font-size: 12vw;
+      padding: 0.4rem;
+    } 
+    span.player.symbol{
+      display: block;
+      text-align: center;
+    }
 }
