gameboard>li css changes

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
     url('bg-pattern-dark.png');
   background-repeat: repeat;
   background-size: 100% 100%, 30% 30%, 100% 100%;
-  min-height: 110rem;
+  height: 93rem;
 }
 
 header {
@@ -165,6 +165,7 @@ ol {
 #game-board {
   display: flex;
   flex-wrap: wrap;
+  width:100%;
   justify-content: center;
   gap: 2rem;
   margin: 3rem 0;
@@ -186,6 +187,11 @@ ol {
   width:60vw;
   align-self: center;
   max-width: 550px;
+}
+
+#game-board>li{
+  width: 100%;
+  max-width: 500px;
 }
 
 #game-board button {
@@ -369,4 +375,4 @@ ol {
       display: block;
       text-align: center;
     }
-}
+  }
